package Mutxamel_FC;
public interface AccionesDeportivas {
    void entrenar();
    void jugarPartido(String rival);
}