package Mutxamel_FC;
public enum Equipos {
    BENJAMIN, ALEVIN, INFANTIL, CADETE, JUVENIL, SENIOR
}