package Mutxamel_FC;
public interface FuncionesIntegrantes {
    void concentrarse();
    void viajar(String ciudad);
    void celebrarGol();
}