package Mutxamel_FC;
public enum Posiciones {
    PORTERO, DEFENSA, CENTROCAMPISTA, DELANTERO
}